Rotação e memorização de estado de flow.

--- a/example/src/app/DragAndDrop/index.css
+++ b/example/src/app/DragAndDrop/index.css
@@ -35,6 +35,9 @@
   .dndflow .dndnode.output {
     border-color: #D3D71F;
   }
+  .dndflow .dndnode.vendido{
+    border-color: #6FBAFF;
+  }
   
   .dndflow .reactflow-wrapper {
     flex-grow: 1;
